# pidrone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  bootstrap.sh  compile.sh  deploy.sh  install.sh  listen.py  reset.py  resetAtmega.py  setResetLow.py  unexport_gpio.sh
avr/: Makefile  avrdude_gpio.conf  blink.c  pins_arduino.h
bee/: .pcb_hat.h.swp  .pch_hat.h.swp  CMakeLists.txt  drone.cpp  hat_pcb.h  linker.ld  openocd.cfg
bee/actuators/: motors.cpp  motors.h
bee/io/: pwm.cpp  pwmreceiver.cpp  sensors.cpp  sensors.h  serial.cpp  serial.h  timer.cpp  timer.h  usart.cpp  usart.h
bee/math/: pid.cpp  pid.h
bee/sys/: mcu.cpp  mcu.h  status.cpp  status.h  timer.cpp  timer.h
cad/: README.md
cmake/: avr-gcc-toolchain.cmake  linker.ld  stm32-clang-toolchain.cmake  stm32-toolchain.cmake
contrib/: CMakeLists.txt
contrib/gps/: TinyGPS.cpp  TinyGPS.h
contrib/org1411/: org1411.cpp  org1411.h
drone_hat/: .avrdude_gpio.conf.swp  CMakeLists.txt  Status.cpp  avrdude_gpio.conf  blink.cpp  clean_gpio.sh  clean_gpio_sh  drone.cpp  drone_working.cpp  hat_pcb.h  linker.ld  openocd.cfg  status.hpp
drone_hat/actuators/: motors.cpp  motors.h
drone_hat/io/: pwm.cpp  pwm.h  pwmreceiver.cpp  pwmreceiver.h  sensors.cpp  sensors.h  serial.cpp  serial.h  usart.cpp  usart.h
drone_hat/math/: pid.cpp  pid.h
files/: Bestellliste Drohne.xlsx
libarduino/: CMakeLists.txt
libarduino/bootloaders/atmega/: ATmegaBOOT_168.c
libarduino/libraries/BME280/: BME280.cpp  BME280.h
libarduino/libraries/PinChangeInterrupt/src/: PinChangeInterrupt.h
libarduino/libraries/Servo/src/: Servo.h
libarduino/libraries/Servo/src/avr/: Servo.cpp
pcb/: build_drone.py
proto/: Drone.cpp  Drone.h  Kalman.h  PID.cpp  PID.h  PWMReceiver.cpp  PWMReceiver.h  README.md  proto.ino
proto/BMI160/: CurieIMU.cpp
src/: CMakeLists.txt
src/bee/: CMakeLists.txt  drone.cpp  hat_pcb.h  openocd.cfg
src/bee/actuators/: motors.cpp  motors.h
src/bee/io/: pwmreceiver.cpp  pwmreceiver.h  sensors.cpp  sensors.h  serial.cpp  serial.h  usart.cpp  usart.h
src/bee/sys/: clock.cpp  clock.h  handler.cpp  handler.h  interrupt.cpp  interrupt.h  mcu.cpp  status.cpp  status.h  systick.cpp  systick.h  timer.cpp  timer.h
